--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
-requests==2.28.2
-beautifulsoup4==4.12.2
-pandas==1.5.3
-numpy==1.24.3
-scikit-learn==1.2.2
-nltk==3.8.1
-tensorflow==2.12.0
-matplotlib==3.7.1
+beautifulsoup4==4.13.3
+certifi==2025.1.31
+charset-normalizer==3.4.1
+filelock==3.18.0
+idna==3.10
+lxml==5.3.1
+PySocks==1.7.1
+requests==2.32.3
+snscrape==0.7.0.20230622
+soupsieve==2.6
+typing_extensions==4.12.2
+urllib3==2.3.0
