--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ librosa==0.9.0
 matplotlib==3.8.4
 nltk==3.9.1
 numpy==1.26.4
-opencv-python==4.9.0.80
+opencv-python-headless
 pandas==2.2.1
 PySocks==1.7.1
 requests==2.32.3
